--- a/ShopPakemon/Views/Shared/_Layout.cshtml
+++ b/ShopPakemon/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ShopPakemon</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ShopPokemon</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,6 +20,9 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Facebook login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="User" asp-action="AllUsersAndTheirOrders">All order</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="user" asp-action="Addorder">Заказать покемона</a>
